icondir = $(datadir)/icons/hicolor/16x16/apps
icon_DATA =					\
	empathy-available.png			\
	empathy-offline.png			\
	empathy-away.png			\
	empathy-extended-away.png		\
	empathy-busy.png			\
	empathy-pending.png			\
	empathy-message.png			\
	empathy-message-new.png			\
	empathy-typing.png			\
	empathy-proto-ekiga.png			\
	empathy-proto-google-talk.png		\
	empathy-proto-msn.png			\
	empathy-proto-gizmo.png			\
	empathy-proto-jabber.png
EXTRA_DIST = $(icon_DATA)
