icondir = $(datadir)/icons/hicolor/22x22/apps
icon_DATA =					\
	empathy.png				\
	empathy-new-message.png			\
	empathy-proto-ekiga.png			\
	empathy-proto-google-talk.png		\
	empathy-proto-msn.png			\
	empathy-proto-gizmo.png			\
	empathy-proto-irc.png			\
	empathy-proto-jabber.png
EXTRA_DIST = $(icon_DATA)
