NULL =

public_icons_themes = \
	hicolor	\
	$(NULL)

public_icons = \
	hicolor_apps_16x16_empathy.png \
	hicolor_apps_22x22_empathy.png \
	hicolor_apps_24x24_empathy.png \
	hicolor_apps_32x32_empathy.png \
	hicolor_apps_48x48_empathy.png \
	hicolor_apps_scalable_empathy.svg \
	$(NULL)

private_icons_themes = \
	hicolor	\
	$(NULL)

private_icons = \
	hicolor_actions_16x16_im-message-new.png \
	hicolor_actions_22x22_im-message-new.png \
	hicolor_actions_24x24_im-message-new.png \
	hicolor_status_16x16_im-message.png \
	hicolor_status_16x16_user-typing.png \
	hicolor_apps_16x16_im-ekiga.png \
	hicolor_apps_16x16_im-gizmo.png \
	hicolor_apps_16x16_im-google-talk.png \
	hicolor_apps_16x16_im-irc.png \
	hicolor_apps_16x16_im-xmpp.png \
	hicolor_apps_16x16_im-msn.png \
	hicolor_apps_16x16_im-sip.png \
	hicolor_apps_16x16_im-local-xmpp.png \
	hicolor_apps_16x16_im-gadugadu.png \
	hicolor_apps_16x16_im-qq.png \
	hicolor_apps_22x22_im-ekiga.png \
	hicolor_apps_22x22_im-gizmo.png \
	hicolor_apps_22x22_im-google-talk.png \
	hicolor_apps_22x22_im-irc.png \
	hicolor_apps_22x22_im-xmpp.png \
	hicolor_apps_22x22_im-msn.png \
	hicolor_apps_22x22_im-sip.png \
	hicolor_apps_22x22_im-local-xmpp.png \
	hicolor_apps_22x22_im-gadugadu.png \
	hicolor_apps_22x22_im-qq.png \
	hicolor_apps_24x24_im-ekiga.png \
	hicolor_apps_24x24_im-gizmo.png \
	hicolor_apps_24x24_im-google-talk.png \
	hicolor_apps_24x24_im-irc.png \
	hicolor_apps_24x24_im-xmpp.png \
	hicolor_apps_24x24_im-msn.png \
	hicolor_apps_24x24_im-sip.png \
	hicolor_apps_24x24_im-local-xmpp.png \
	hicolor_apps_24x24_im-gadugadu.png \
	hicolor_apps_24x24_im-qq.png \
	hicolor_apps_32x32_im-ekiga.png \
	hicolor_apps_32x32_im-gizmo.png \
	hicolor_apps_32x32_im-google-talk.png \
	hicolor_apps_32x32_im-irc.png \
	hicolor_apps_32x32_im-xmpp.png \
	hicolor_apps_32x32_im-msn.png \
	hicolor_apps_32x32_im-sip.png \
	hicolor_apps_32x32_im-local-xmpp.png \
	hicolor_apps_32x32_im-gadugadu.png \
	hicolor_apps_32x32_im-qq.png \
	hicolor_apps_48x48_im-ekiga.png \
	hicolor_apps_48x48_im-gizmo.png \
	hicolor_apps_48x48_im-google-talk.png \
	hicolor_apps_48x48_im-irc.png \
	hicolor_apps_48x48_im-xmpp.png \
	hicolor_apps_48x48_im-msn.png \
	hicolor_apps_48x48_im-sip.png \
	hicolor_apps_48x48_im-local-xmpp.png \
	hicolor_apps_48x48_im-gadugadu.png \
	hicolor_apps_48x48_im-qq.png \
	hicolor_apps_scalable_im-ekiga.svg \
	hicolor_apps_scalable_im-gizmo.svg \
	hicolor_apps_scalable_im-google-talk.svg \
	hicolor_apps_scalable_im-irc.svg \
	hicolor_apps_scalable_im-xmpp.svg \
	hicolor_apps_scalable_im-msn.svg \
	hicolor_apps_scalable_im-sip.svg \
	hicolor_apps_scalable_im-local-xmpp.svg \
	hicolor_apps_scalable_im-gadugadu.svg \
	hicolor_apps_scalable_im-qq.svg \
	hicolor_status_16x16_empathy-available.png \
	hicolor_status_16x16_empathy-away.png \
	hicolor_status_16x16_empathy-busy.png \
	hicolor_status_16x16_empathy-extended-away.png \
	hicolor_status_16x16_empathy-offline.png \
	hicolor_status_16x16_empathy-pending.png \
	hicolor_status_22x22_empathy-available.png \
	hicolor_status_22x22_empathy-away.png \
	hicolor_status_22x22_empathy-busy.png \
	hicolor_status_22x22_empathy-extended-away.png \
	hicolor_status_22x22_empathy-offline.png \
	hicolor_status_22x22_empathy-pending.png \
	hicolor_status_24x24_empathy-available.png \
	hicolor_status_24x24_empathy-away.png \
	hicolor_status_24x24_empathy-busy.png \
	hicolor_status_24x24_empathy-extended-away.png \
	hicolor_status_24x24_empathy-offline.png \
	hicolor_status_24x24_empathy-pending.png \
	hicolor_status_32x32_empathy-available.png \
	hicolor_status_32x32_empathy-away.png \
	hicolor_status_32x32_empathy-busy.png \
	hicolor_status_32x32_empathy-extended-away.png \
	hicolor_status_32x32_empathy-offline.png \
	hicolor_status_32x32_empathy-pending.png \
	hicolor_status_48x48_empathy-available.png \
	hicolor_status_48x48_empathy-away.png \
	hicolor_status_48x48_empathy-busy.png \
	hicolor_status_48x48_empathy-extended-away.png \
	hicolor_status_48x48_empathy-offline.png \
	hicolor_status_48x48_empathy-pending.png \
	hicolor_status_scalable_empathy-available.svg \
	hicolor_status_scalable_empathy-away.svg \
	hicolor_status_scalable_empathy-busy.svg \
	hicolor_status_scalable_empathy-extended-away.svg \
	hicolor_status_scalable_empathy-offline.svg \
	hicolor_status_scalable_empathy-pending.svg \
	$(NULL)

EXTRA_DIST = \
	$(public_icons)		\
	$(private_icons)	\
	$(NULL)

###############################################################################

gtk_update_icon_cache = gtk-update-icon-cache -f -t

update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache."; \
		for theme in $(public_icons_themes); do \
			$(gtk_update_icon_cache) $(datadir)/icons/$$theme; \
		done; \
		for theme in $(private_icons_themes); do \
			$(gtk_update_icon_cache) $(pkgdatadir)/icons/$$theme; \
		done; \
	else \
		echo "*** Icon cache not updated.  After (un)install, run this:"; \
		for theme in $(public_icons_themes); do \
			echo "***   $(gtk_update_icon_cache) $(datadir)/icons/$$theme"; \
		done; \
		for theme in $(private_icons_themes); do \
			echo "***   $(gtk_update_icon_cache) $(pkgdatadir)/icons/$$theme"; \
		done; \
	fi

install-icons:
	for icon in $(public_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done; \
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-icons:
	-for icon in $(public_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done; \
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-data-local: install-icons update-icon-cache

uninstall-local: uninstall-icons update-icon-cache
