icondir = $(datadir)/icons/hicolor/scalable/apps
icon_DATA =					\
	empathy.svg				\
	empathy-available.svg			\
	empathy-offline.svg			\
	empathy-away.svg			\
	empathy-extended-away.svg		\
	empathy-busy.svg			\
	empathy-pending.svg			\
	empathy-proto-ekiga.svg			\
	empathy-proto-google-talk.svg		\
	empathy-proto-msn.svg			\
	empathy-proto-gizmo.svg			\
	empathy-proto-irc.svg			\
	empathy-proto-jabber.svg        \
	empathy-proto-salut.svg
	
EXTRA_DIST = $(icon_DATA)
